# test_cryptopto

./: CMakeLists.txt  main.cpp
cmake/: FindCAPILite.cmake
